--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
     sdk: flutter
   provider: ^4.0.2
   flutter_secure_storage: ^3.3.3
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.16.1
+  syncfusion_flutter_datepicker: ^18.1.36-beta
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
