--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.16.1
+  calendarro: ^1.2.0
   syncfusion_flutter_datepicker: ^18.1.36-beta
 
   # The following adds the Cupertino Icons font to your application.
