--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   calendarro: ^1.2.0
+  fl_chart: ^0.6.0
+  charts_flutter: ^0.9.0
   syncfusion_flutter_datepicker: ^18.1.36-beta
 
   # The following adds the Cupertino Icons font to your application.
